@@ -232,8 +232,8 @@ d802068bd01ca930439057b93de06147bfb20281 data/supplementary/advancements/recipes
 9ec48b989bbfa07d24c960105f1e1b30167c6170 data/supplementary/advancements/recipes/supplementary/netherite_pillar.json
 1573b3ae88a83f857411c386868533ce39213bb8 data/supplementary/advancements/recipes/supplementary/pebbles.json
 4c79568e63617664d7ac75d8a0885510112be3a5 data/supplementary/advancements/recipes/supplementary/polished_rock_block.json
-54ac99c4d8d5762f6fc9ccf085b4b7f907be0fa4 data/supplementary/advancements/recipes/supplementary/polished_rock_button.json
-53eef5b9e8d9d3f3a2fa13bceb21b266ef0c507e data/supplementary/advancements/recipes/supplementary/polished_rock_pressure_plate.json
+ca1b419515d6da8ef9fc341f078d186685e7e0c0 data/supplementary/advancements/recipes/supplementary/polished_rock_button.json
+2b4d3715e462e3214462d3c9a7ca89039a0ce5bd data/supplementary/advancements/recipes/supplementary/polished_rock_pressure_plate.json
 4a4512429a83b2428138660fba1c71bc2b75a901 data/supplementary/advancements/recipes/supplementary/polished_rock_slab.json
 6c8ae3f00fff7f2586143231c1d758c1a38816c7 data/supplementary/advancements/recipes/supplementary/polished_rock_slab_from_polished_rock_block_stonecutting.json
 49d49356cd073f8928afb9d8305a5c54d0be0234 data/supplementary/advancements/recipes/supplementary/polished_rock_stairs.json
@@ -322,8 +322,8 @@ a17dc9f5c64f56d10fbcae8fcd721f83e5aa46e2 data/supplementary/recipes/emerald_pill
 ac5f90d7bd718036a6d5a1c1124364621fefe074 data/supplementary/recipes/netherite_pillar.json
 a90204f187914d575b3cc3417cf58004aab698e1 data/supplementary/recipes/pebbles.json
 bfc170432b6e342a44d29a14d276941e5f67fd0b data/supplementary/recipes/polished_rock_block.json
-dc0a57ab01b53810ce8a7df64bb15d8c255060ff data/supplementary/recipes/polished_rock_button.json
-33bdde52909a9208c8464025937788597213a494 data/supplementary/recipes/polished_rock_pressure_plate.json
+e10c93d75b50c8bc9c94a2f53ea970b3a5797c89 data/supplementary/recipes/polished_rock_button.json
+9552ab99e8733ad4bdb34f8c6bdbdb48187f3d6d data/supplementary/recipes/polished_rock_pressure_plate.json
 c88840e4003de4010f45f2fc5ccb2380fbc8226c data/supplementary/recipes/polished_rock_slab.json
 9556e3ac94bdf0fdac997749f22c84a75422bf2a data/supplementary/recipes/polished_rock_slab_from_polished_rock_block_stonecutting.json
 ab7977c4c05f5a9d946b9c6a3f305bdc3e1f711c data/supplementary/recipes/polished_rock_stairs.json
