@@ -6,12 +6,12 @@
     ]
   },
   "criteria": {
-    "has_rock_block": {
+    "has_polished_rock_block": {
       "trigger": "minecraft:inventory_changed",
       "conditions": {
         "items": [
           {
-            "item": "supplementary:rock_block"
+            "item": "supplementary:polished_rock_block"
           }
         ]
       }
@@ -35,7 +35,7 @@
   },
   "requirements": [
     [
-      "has_rock_block",
+      "has_polished_rock_block",
       "has_polished_rock_button",
       "has_the_recipe"
     ]
