@@ -5,7 +5,7 @@
   ],
   "key": {
     "#": {
-      "item": "supplementary:rock_block"
+      "item": "supplementary:polished_rock_block"
     }
   },
   "result": {
